kubernetes/platform/development/services/prometheus.yml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: polar-prometheus
    labels:
        app: polar-prometheus
spec:
    replicas: 1
    selector:
        matchLabels:
            app: polar-prometheus
    template:
        metadata:
            name: polar-prometheus
            labels:
                app: polar-prometheus
        spec:
            containers:
                -   name: polar-prometheus
                    image: prom/prometheus:v2.38.0
                    imagePullPolicy: IfNotPresent
                    volumeMounts:
                        -   mountPath: /etc/prometheus
                            name: prometheus-config-volume
            volumes:
                -   name: prometheus-config-volume
                    configMap:
                        name: prometheus-config
---

apiVersion: v1
kind: Service
metadata:
    name: polar-prometheus
    labels:
        app: polar-prometheus
spec:
    type: ClusterIP
    selector:
        app: polar-prometheus
    ports:
        -   port: 9090
            targetPort: 9090
            protocol: TCP
