kubernetes/platform/development/services/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        -   host: polar-keycloak
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: polar-keycloak
                                port:
                                    number: 80
